--- a/builder/Cargo.toml
+++ b/builder/Cargo.toml
@@ -14,11 +14,13 @@ path = "tests/progress.rs"
 
 # For debugging macro by using cargo expand --bin <NAME>
 #[[bin]]
-#name = "parse"
-#path = "tests/01-parse.rs"
+#name = "create-builder"
+#path = "tests/02-create-builder.rs"
 
 [dev-dependencies]
 trybuild = "1.0"
 
 [dependencies]
+proc-macro2 = "1.0"
 syn = "1.0"
+quote = "1.0"
