--- a/builder/Cargo.toml
+++ b/builder/Cargo.toml
@@ -31,15 +31,15 @@ path = "tests/05-method-chaining.rs"
 [[bin]]
 name = "06"
 path = "tests/06-optional-field.rs"
-[[bin]]
-name = "07"
-path = "tests/07-repeated-field.rs"
-[[bin]]
-name = "08"
-path = "tests/08-unrecognized-atteribute.rs"
-[[bin]]
-name = "09"
-path = "tests/09-redefined-prelude-types.rs"
+#[[bin]]
+#name = "07"
+#path = "tests/07-repeated-field.rs"
+#[[bin]]
+#name = "08"
+#path = "tests/08-unrecognized-attribute.rs"
+#[[bin]]
+#name = "09"
+#path = "tests/09-redefined-prelude-types.rs"
 
 [dev-dependencies]
 trybuild = "1.0"
