--- a/builder/Cargo.toml
+++ b/builder/Cargo.toml
@@ -37,9 +37,9 @@ path = "tests/07-repeated-field.rs"
 #[[bin]]
 #name = "08"
 #path = "tests/08-unrecognized-attribute.rs"
-#[[bin]]
-#name = "09"
-#path = "tests/09-redefined-prelude-types.rs"
+[[bin]]
+name = "09"
+path = "tests/09-redefined-prelude-types.rs"
 
 [dev-dependencies]
 trybuild = "1.0"
