--- a/debug/Cargo.toml
+++ b/debug/Cargo.toml
@@ -12,8 +12,36 @@ proc-macro = true
 name = "tests"
 path = "tests/progress.rs"
 
+# For debugging macro by using cargo expand --bin <NAME>
+#[[bin]]
+#name = "01"
+#path = "tests/01-parse.rs"
+#[[bin]]
+#name = "02"
+#path = "tests/02-impl-debug.rs"
+#[[bin]]
+#name = "03"
+#path = "tests/03-custom-format.rs"
+#[[bin]]
+#name = "04"
+#path = "tests/04-type-parameter.rs"
+#[[bin]]
+#name = "05"
+#path = "tests/05-phantom-data.rs"
+#[[bin]]
+#name = "06"
+#path = "tests/06-bound-trouble.rs"
+#[[bin]]
+#name = "07"
+#path = "tests/07-associated-type.rs"
+#[[bin]]
+#name = "08"
+#path = "tests/08-escape-hatch.rs"
+
 [dev-dependencies]
 trybuild = "1.0"
 
 [dependencies]
-# TODO
+proc-macro2 = "1.0"
+syn = { version = "1.0", features = ["full", "extra-traits"] }
+quote = "1.0"
