--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,10 @@ rust:
   - nightly
 
 install:
-  - rustup component add rustfmt
-  - rustup component add clippy
+  - if [[ $TRAVIS_RUST_VERSION == "stable" ]]; then rustup component add rustfmt; fi
+  - if [[ $TRAVIS_RUST_VERSION == "stable" ]]; then rustup component add clippy; fi
 
 script:
-  - cargo fmt --all -- --check
-  - cargo clippy --all -- -D warnings
+  - if [[ $TRAVIS_RUST_VERSION == "stable" ]]; then cargo fmt --all -- --check
+  - if [[ $TRAVIS_RUST_VERSION == "stable" ]]; then cargo clippy --all -- -D warnings
   - cargo test --all
